Use Charset variants of URLEncoder and URLDecoder methods